overflows-fixed

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -22,12 +22,13 @@
   align-items: center;
   justify-content: space-between;
   min-height: 500px;
-  padding: 0rem 0rem 2rem 5rem;
+
   flex: 1 1 50%;
 }
 
 .contact-links-container {
   color: rgb(63, 62, 62);
+  padding: 0rem 0rem 2rem 5rem;
 }
 .contact-link {
   display: flex;
@@ -102,11 +103,22 @@
   .contact-details-box {
     min-height: auto;
     border-radius: 0;
-    padding: 2rem 0rem 2rem 5rem;
+  }
+  .contact-links-container {
+    padding: 2rem;
+  }
+  .contact-link-detail h2 {
+    font-size: 1.5rem;
+  }
+  .contact-link-detail p {
+    font-size: 1.1rem;
+  }
+  .contact-link-detail a {
+    font-size: 1rem;
   }
 
   .contact-link svg {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
   .contact-form {
     margin-top: 1rem;
